--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
     .profile-image img {
       width: 250px;
       height: 250px;
-      border-radius: 50%;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
       margin-bottom: 1rem;
@@ -118,8 +117,7 @@
     .social-links a img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
-      border-radius: 50%;
+      object-fit: cover;
       background-color: #1e293b;
       padding: 5px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
