--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#publications-and-awards">Publications and Awards</a></li>
-      <li><a href="#gallary">Gallary</a></li>
+      <li><a href="#gallary">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
@@ -247,7 +247,7 @@
       </div>
     </div>
   </section>
-  <section class="get-in-touch" id="contact">
+  <section class="get-in-touch" id="get-in-touch">
     <h2>Get in Touch</h2>
     <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
     <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank" style="color: #38bdf8;">Venkatesh Lab</a> CSIR-CCMB</p>
