--- a/index.html
+++ b/index.html
@@ -52,29 +52,42 @@
     }
     .hero {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
-      height: 100vh;
+      justify-content: center;
       padding: 3rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
     }
-    .hero .about-me {
+    .hero h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #38bdf8;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    .hero .about-me-content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+    .hero .about-me-text {
       width: 50%;
-      text-align: left;
+      text-align: justify;
       padding-right: 2rem;
     }
-    .hero .about-me p {
+    .hero .about-me-text p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-bottom: 1.5rem;
       color: #e2e8f0;
     }
-    .hero .about-me a {
+    .hero .about-me-text a {
       color: #38bdf8;
       text-decoration: none;
     }
-    .hero .about-me a:hover {
+    .hero .about-me-text a:hover {
       text-decoration: underline;
     }
     .hero .profile-image {
@@ -174,6 +187,16 @@
       .social-links {
         flex-direction: row;
       }
+      .hero .about-me-content {
+        flex-direction: column;
+        align-items: center;
+      }
+      .hero .about-me-text,
+      .hero .profile-image {
+        width: 100%;
+        text-align: center;
+        padding: 0;
+      }
     }
   </style>
 </head>
@@ -190,41 +213,44 @@
     </ul>
   </nav>
   <section class="hero" id="about-me">
-    <div class="about-me">
-      <p>
-        Welcome to my personal website! I am a Neuroscience Researcher at the
-        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology (iDN)
-        </a>, Germany.
-      </p>
-      <p>
-        At
-        <a href="https://www.uni-mainz.de/" target="_blank">
-          Johannes Gutenberg University Mainz
-        </a>, in collaboration with the
-        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research
-        </a>, our interdisciplinary team is pioneering new regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries. By merging neurobiology, neuroimmunology, chemistry, and polymer research, we're developing innovative strategies to heal the nervous system.
-      </p>
-      <p>
-        Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-      </p>
-    </div>
-    <div class="profile-image">
-      <img src="your-profile-picture.jpg" alt="Profile Background Image" />
-      <div class="social-links">
-        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-          <img src="facebookff.jpg" alt="Facebook Logo">
-        </a>
-        <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-          <img src="InstagramF.jpg" alt="Instagram Logo">
-        </a>
-        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-          <img src="linkedIn.jpg" alt="LinkedIn Logo">
-        </a>
-        <a href="https://x.com/arupamb07" target="_blank">
-          <img src="twitterFL.jpg" alt="X Logo">
-        </a>
+    <h2>About Me</h2>
+    <div class="about-me-content">
+      <div class="about-me-text">
+        <p>
+          Welcome to my personal website! I am a Neuroscience Researcher at the
+          <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+            Institute of Developmental Biology and Neurobiology (iDN)
+          </a>, Germany.
+        </p>
+        <p>
+          At
+          <a href="https://www.uni-mainz.de/" target="_blank">
+            Johannes Gutenberg University Mainz
+          </a>, in collaboration with the
+          <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+            Max Planck Institute for Polymer Research
+          </a>, our interdisciplinary team is pioneering new regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries. By merging neurobiology, neuroimmunology, chemistry, and polymer research, we're developing innovative strategies to heal the nervous system.
+        </p>
+        <p>
+          Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
+        </p>
+      </div>
+      <div class="profile-image">
+        <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+        <div class="social-links">
+          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+            <img src="facebookff.jpg" alt="Facebook Logo">
+          </a>
+          <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+            <img src="InstagramF.jpg" alt="Instagram Logo">
+          </a>
+          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+            <img src="linkedIn.jpg" alt="LinkedIn Logo">
+          </a>
+          <a href="https://x.com/arupamb07" target="_blank">
+            <img src="twitterFL.jpg" alt="X Logo">
+          </a>
+        </div>
       </div>
     </div>
   </section>
