--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
       background-color: #38bdf8;
     }
     .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
       padding: 3rem;
       background: linear-gradient(to right, #0f172a, #1e293b);
     }
@@ -67,15 +63,17 @@
     }
     .hero .about-me-content {
       display: flex;
-      flex-direction: row;
       justify-content: space-between;
-      align-items: center;
-      width: 100%;
+      align-items: flex-start;
+      gap: 2rem;
     }
     .hero .about-me-text {
-      width: 50%;
+      flex: 0 0 60%; /* 60% width for the text */
       text-align: justify;
-      padding-right: 2rem;
+      padding: 1rem;
+      background: #1e293b;
+      border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     }
     .hero .about-me-text p {
       font-size: 1.2rem;
@@ -91,19 +89,17 @@
       text-decoration: underline;
     }
     .hero .profile-image {
-      width: 45%;
+      flex: 0 0 40%; /* 40% width for the image */
       display: flex;
-      flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 500px;
+      max-width: 300px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
-      margin-bottom: 1rem;
     }
     .social-links {
       display: flex;
@@ -181,21 +177,14 @@
       background-color: #1e293b;
     }
     @media (max-width: 768px) {
-      .get-in-touch {
-        padding: 3rem 1rem;
-      }
-      .social-links {
-        flex-direction: row;
-      }
       .hero .about-me-content {
         flex-direction: column;
         align-items: center;
       }
       .hero .about-me-text,
       .hero .profile-image {
-        width: 100%;
+        flex: 1 1 auto;
         text-align: center;
-        padding: 0;
       }
     }
   </style>
@@ -237,21 +226,21 @@
       </div>
       <div class="profile-image">
         <img src="your-profile-picture.jpg" alt="Profile Background Image" />
-        <div class="social-links">
-          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-            <img src="facebookff.jpg" alt="Facebook Logo">
-          </a>
-          <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-            <img src="InstagramF.jpg" alt="Instagram Logo">
-          </a>
-          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-            <img src="linkedIn.jpg" alt="LinkedIn Logo">
-          </a>
-          <a href="https://x.com/arupamb07" target="_blank">
-            <img src="twitterFL.jpg" alt="X Logo">
-          </a>
-        </div>
       </div>
+    </div>
+    <div class="social-links">
+      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+        <img src="facebookff.jpg" alt="Facebook Logo">
+      </a>
+      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+        <img src="InstagramF.jpg" alt="Instagram Logo">
+      </a>
+      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+        <img src="linkedIn.jpg" alt="LinkedIn Logo">
+      </a>
+      <a href="https://x.com/arupamb07" target="_blank">
+        <img src="twitterFL.jpg" alt="X Logo">
+      </a>
     </div>
   </section>
   <section class="education-section" id="education">
