--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
     .hero .profile-image {
       flex: 0 0 40%; /* 40% width for the image */
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 300px;
+      max-width: 400px; /* Increased size of the profile picture */
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -226,21 +227,21 @@
       </div>
       <div class="profile-image">
         <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+        <div class="social-links">
+          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+            <img src="facebookff.jpg" alt="Facebook Logo">
+          </a>
+          <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+            <img src="InstagramF.jpg" alt="Instagram Logo">
+          </a>
+          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+            <img src="linkedIn.jpg" alt="LinkedIn Logo">
+          </a>
+          <a href="https://x.com/arupamb07" target="_blank">
+            <img src="twitterFL.jpg" alt="X Logo">
+          </a>
+        </div>
       </div>
-    </div>
-    <div class="social-links">
-      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-        <img src="facebookff.jpg" alt="Facebook Logo">
-      </a>
-      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-        <img src="InstagramF.jpg" alt="Instagram Logo">
-      </a>
-      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-        <img src="linkedIn.jpg" alt="LinkedIn Logo">
-      </a>
-      <a href="https://x.com/arupamb07" target="_blank">
-        <img src="twitterFL.jpg" alt="X Logo">
-      </a>
     </div>
   </section>
   <section class="education-section" id="education">
