--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      gap: 2rem;
+      gap: 1.5rem; /* Reduced gap between text and profile image */
     }
     .hero .about-me-text {
-      flex: 0 0 50%; /* 50% width for the text */
+      flex: 0 0 60%; /* 60% width for the text */
       text-align: justify;
-      padding: 1rem;
-      background: #1e293b;
-      border-radius: 10px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     }
     .hero .about-me-text p {
       font-size: 1.2rem;
@@ -89,7 +85,7 @@
       text-decoration: underline;
     }
     .hero .profile-image {
-      flex: 0 0 50%; /* 50% width for the image */
+      flex: 0 0 40%; /* 40% width for the image */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -97,7 +93,7 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 400px; /* Increased size of the profile picture */
+      max-width: 450px; /* Increased size of the profile picture */
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
