--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
           <a href="https://x.com/arupamb07" target="_blank">
             <img src="twitterFL.jpg" alt="X Logo">
           </a>
+          <a href="mailto:arupambiswas007@gmail.com" target="_blank">
+            <img src="gmail.jpg" alt="Gmail Logo">
+          </a>
         </div>
       </div>
     </div>
