--- a/index.html
+++ b/index.html
@@ -133,18 +133,35 @@
       margin-bottom: 2rem;
       color: #38bdf8;
     }
-    .education-subsection {
+    .education-item {
       margin-bottom: 3rem;
+      text-align: left;
     }
-    .education-subsection .content h3 {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-      color: #f8fafc;
+    .education-item h3 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #38bdf8;
     }
-    .education-subsection .content p {
+    .education-item h4 {
       font-size: 1.2rem;
-      line-height: 1.8;
+      font-weight: 600;
+      color: #f8fafc;
+      margin-top: 0.5rem;
+    }
+    .education-item p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #f8fafc;
+      margin-top: 0.5rem;
+    }
+    .education-item ul {
+      list-style: disc;
+      padding-left: 1.5rem;
+      margin-top: 0.5rem;
+    }
+    .education-item ul li {
+      font-size: 1rem;
+      line-height: 1.6;
       color: #e2e8f0;
     }
     .get-in-touch {
@@ -237,21 +254,32 @@
             <img src="twitterFL.jpg" alt="X Logo">
           </a>
           <a href="mailto:arupambiswas007@gmail.com" target="_blank">
-            <img src="gmail.jpg" alt="Gmail Logo">
+            <img src="gmail-logo.png" alt="Gmail Logo">
           </a>
         </div>
       </div>
     </div>
   </section>
-  <section class="education-section" id="education">
+  <section id="education" class="education-section">
     <h2>Education</h2>
-    <div class="education-subsection">
-      <div class="content">
-        <h3>Undergraduate and Post-graduate</h3>
-        <p>
-          Write about your undergraduate education here. Include details about your university, course, and any significant achievements or projects during your undergraduate years.
-        </p>
-      </div>
+    <div class="education-item">
+      <h3>2018-2022</h3>
+      <h4>PhD in Nanoscience and Nanotechnology</h4>
+      <p><strong>Amity University Uttar Pradesh (AUUP), Noida</strong></p>
+      <ul>
+        <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
+        <li>Supervisor: Dr. Nidhi Chauhan, AUUP, Noida, India</li>
+        <li>Co-Supervisor: Dr. Donald H. Burke, University of Missouri, Missouri, USA</li>
+      </ul>
+    </div>
+    <div class="education-item">
+      <h3>2008-2014</h3>
+      <h4>Integrated M.Tech in Cognitive Neurosciences</h4>
+      <p><strong>Centre for Converging Technology (CCT), University of Rajasthan (UoR), Jaipur</strong></p>
+      <ul>
+        <li>Master's Dissertation: Morphological changes in Alzheimer's disease in Drosophila model</li>
+        <li>Supervisor: Dr. BKC Sagar, National Institute on Mental Health and Neurosciences (NIMHANS), Bengaluru</li>
+      </ul>
     </div>
     <div class="education-subsection">
       <div class="content">
