--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
     <h2>Education</h2>
     <div class="education-item">
       <h3>2018-2022</h3>
-      <h4>PhD in Nanoscience and Nanotechnology</h4>
-      <p><strong>Amity University Uttar Pradesh (AUUP), Noida</strong></p>
+      <h4>PhD in Neuroscience</h4>
+      <p><strong> Institute of Developmental Biology and Neurobiology (iDN), Germany</strong></p>
       <ul>
         <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
         <li>Supervisor: Dr. Nidhi Chauhan, AUUP, Noida, India</li>
@@ -273,12 +273,12 @@
       </ul>
     </div>
     <div class="education-item">
-      <h3>2008-2014</h3>
-      <h4>Integrated M.Tech in Cognitive Neurosciences</h4>
-      <p><strong>Centre for Converging Technology (CCT), University of Rajasthan (UoR), Jaipur</strong></p>
+      <h3>2019-2024</h3>
+      <h4>Integrated M.Sc in Lifesciences</h4>
+      <p><strong>Integrated Science Education & Research Centre (ISERC), Visva-Bharati, India</strong></p>
       <ul>
-        <li>Master's Dissertation: Morphological changes in Alzheimer's disease in Drosophila model</li>
-        <li>Supervisor: Dr. BKC Sagar, National Institute on Mental Health and Neurosciences (NIMHANS), Bengaluru</li>
+        <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
+        <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India</li>
       </ul>
     </div>
     <div class="education-subsection">
