--- a/index.html
+++ b/index.html
@@ -263,13 +263,12 @@
   <section id="education" class="education-section">
     <h2>Education</h2>
     <div class="education-item">
-      <h3>2018-2022</h3>
+      <h3>2025-Present Day</h3>
       <h4>PhD in Neuroscience</h4>
-      <p><strong> Institute of Developmental Biology and Neurobiology (iDN), Germany</strong></p>
+      <p><strong> Johannes Gutenberg University Mainz, Germany</strong></p>
       <ul>
         <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
-        <li>Supervisor: Dr. Nidhi Chauhan, AUUP, Noida, India</li>
-        <li>Co-Supervisor: Dr. Donald H. Burke, University of Missouri, Missouri, USA</li>
+        <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
       </ul>
     </div>
     <div class="education-item">
