--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <img src="twitterFL.jpg" alt="X Logo">
           </a>
           <a href="mailto:arupambiswas007@gmail.com" target="_blank">
-            <img src="gmail-logo.png" alt="Gmail Logo">
+            <img src="gmail.jpg" alt="Gmail Logo">
           </a>
         </div>
       </div>
