--- a/index.html
+++ b/index.html
@@ -267,17 +267,17 @@
       <h4>PhD in Neuroscience</h4>
       <p><strong> Johannes Gutenberg University Mainz, Germany</strong></p>
       <ul>
-        <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs</li>
+        <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
         <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
       </ul>
     </div>
     <div class="education-item">
       <h3>2019-2024</h3>
-      <h4>Integrated M.Sc in Lifesciences</h4>
-      <p><strong>Integrated Science Education & Research Centre (ISERC), Visva-Bharati, India</strong></p>
+      <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
+      <p><strong>Integrated Science Education & Research Centre (ISERC), Visva-Bharati, India.</strong></p>
       <ul>
         <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
-        <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India</li>
+        <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India.</li>
       </ul>
     </div>
     <div class="education-subsection">
