--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
     }
     .education-section {
       padding: 5rem 3rem;
-      background: #1e293b;
-      text-align: center;
+      background: #ffffff; /* White background for the education section */
+      color: #0f172a; /* Dark text for better contrast */
     }
     .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
-      color: #38bdf8;
+      color: #0f172a; /* Dark text color */
     }
     .education-item {
       margin-bottom: 3rem;
@@ -140,18 +140,18 @@
     .education-item h3 {
       font-size: 1.5rem;
       font-weight: 700;
-      color: #38bdf8;
+      color: #1e293b;
     }
     .education-item h4 {
       font-size: 1.2rem;
       font-weight: 600;
-      color: #f8fafc;
+      color: #1e293b;
       margin-top: 0.5rem;
     }
     .education-item p {
       font-size: 1rem;
       line-height: 1.6;
-      color: #f8fafc;
+      color: #1e293b;
       margin-top: 0.5rem;
     }
     .education-item ul {
@@ -162,7 +162,7 @@
     .education-item ul li {
       font-size: 1rem;
       line-height: 1.6;
-      color: #e2e8f0;
+      color: #334155;
     }
     .get-in-touch {
       padding: 5rem;
@@ -265,7 +265,7 @@
     <div class="education-item">
       <h3>2025-Present Day</h3>
       <h4>PhD in Neuroscience</h4>
-      <p><strong> Johannes Gutenberg University Mainz, Germany</strong></p>
+      <p><strong>Johannes Gutenberg University Mainz, Germany</strong></p>
       <ul>
         <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
         <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
