--- a/index.html
+++ b/index.html
@@ -264,13 +264,22 @@
     <h2>Education</h2>
     <div class="education-item">
       <h3>2025-Present Day</h3>
-      <h4>PhD in Neuroscience</h4>
-      <p><strong>Johannes Gutenberg University Mainz, Germany</strong></p>
-      <ul>
-        <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
-        <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
-      </ul>
-    </div>
+    <h4>PhD in Neuroscience</h4>
+    <p>
+      <strong>
+        <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1e293b;">
+          Johannes Gutenberg University Mainz
+        </a>, 
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1e293b;">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>, Germany
+      </strong>
+    </p>
+    <ul>
+      <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
+      <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
+    </ul>
+  </div>
     <div class="education-item">
       <h3>2019-2024</h3>
       <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
