--- a/index.html
+++ b/index.html
@@ -267,17 +267,18 @@
     <h4>PhD in Neuroscience</h4>
     <p>
       <strong>
-        <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1e293b;">
+        <a href="https://www.uni-mainz.de/" target="_blank">
           Johannes Gutenberg University Mainz
-        </a>, 
-        <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1e293b;">
-          Institute of Developmental Biology and Neurobiology (iDN)
-        </a>, Germany
+        </a>, Germany.
       </strong>
     </p>
     <ul>
       <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
-      <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
+      <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>,
+        Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
     </ul>
   </div>
     <div class="education-item">
