--- a/index.html
+++ b/index.html
@@ -277,14 +277,13 @@
       <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
-        </a>,
-        Institute of Developmental Biology and Neurobiology (iDN), Germany</li>
+        </a>, Germany</li>
     </ul>
   </div>
     <div class="education-item">
       <h3>2019-2024</h3>
       <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
-      <p><strong>Integrated Science Education & Research Centre (ISERC), Visva-Bharati, India.</strong></p>
+      <p><strong> <a href="https://www.visvabharati.ac.in/index.html" target="_blank">Visva-Bharati</a>, India.</strong></p>
       <ul>
         <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
         <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India.</li>
