--- a/index.html
+++ b/index.html
@@ -1,134 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Personal website of Arupam Biswas, Neuroscience Researcher at the Institute of Developmental Biology and Neurobiology (iDN), Germany." />
-  <meta name="author" content="Arupam Biswas" />
-  <meta property="og:title" content="Arupam Biswas - Neuroscience Researcher" />
-  <meta property="og:description" content="Learn more about Arupam Biswas, a Neuroscience Researcher pioneering regenerative treatments for the nervous system." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="path-to-social-preview-image.jpg" />
-  <meta property="og:url" content="https://your-website-url.com" />
-  <title>Arupam Biswas</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    /* Styles remain the same as in your original code */
-  </style>
-</head>
-<body>
-  <nav>
-    <h1>Hello, I'm Arupam</h1>
-    <ul>
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#research">Research</a></li>
-      <li><a href="#publications-and-awards">Publications and Awards</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#get-in-touch">Get in Touch</a></li>
-    </ul>
-  </nav>
-  <section class="hero" id="about-me">
-    <h2>About Me</h2>
-    <div class="about-me-content">
-      <div class="about-me-text">
-        <p>
-          Welcome to my personal website! I am a Neuroscience Researcher at the
-          <a href="https://idn.biologie.uni-mainz.de/" target="_blank" rel="noopener noreferrer">
-            Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, Germany.
-        </p>
-        <p>
-          At
-          <a href="https://www.uni-mainz.de/" target="_blank" rel="noopener noreferrer">
-            Johannes Gutenberg University Mainz
-          </a>, in collaboration with the
-          <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank" rel="noopener noreferrer">
-            Max Planck Institute for Polymer Research
-          </a>, our interdisciplinary team is pioneering new regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries. By merging neurobiology, neuroimmunology, chemistry, and polymer research, we're developing innovative strategies to heal the nervous system.
-        </p>
-        <p>
-          Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-        </p>
-      </div>
-      <div class="profile-image">
-        <img src="path-to-your-profile-picture.jpg" alt="Profile picture of Arupam Biswas" />
-        <div class="social-links">
-          <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" rel="noopener noreferrer">
-            <img src="path-to-facebook-icon.jpg" alt="Facebook profile of Arupam Biswas">
-          </a>
-          <a href="https://www.instagram.com/arupambiswas/" target="_blank" rel="noopener noreferrer">
-            <img src="path-to-instagram-icon.jpg" alt="Instagram profile of Arupam Biswas">
-          </a>
-          <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank" rel="noopener noreferrer">
-            <img src="path-to-linkedin-icon.jpg" alt="LinkedIn profile of Arupam Biswas">
-          </a>
-          <a href="https://x.com/arupamb07" target="_blank" rel="noopener noreferrer">
-            <img src="path-to-twitter-icon.jpg" alt="X (formerly Twitter) profile of Arupam Biswas">
-          </a>
-          <a href="mailto:arupambiswas007@gmail.com" target="_blank" rel="noopener noreferrer">
-            <img src="path-to-gmail-icon.jpg" alt="Email Arupam Biswas">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="education" class="education-section">
-    <h2>Education</h2>
-    <div class="education-item">
-      <h3>2025 - Present Day</h3>
-      <h4>PhD in Neuroscience</h4>
-      <p>
-        <strong>
-          <a href="https://www.uni-mainz.de/" target="_blank" rel="noopener noreferrer">
-            Johannes Gutenberg University Mainz
-          </a>, Germany.
-        </strong>
-      </p>
-      <ul>
-        <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
-        <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, 
-          <a href="https://idn.biologie.uni-mainz.de/" target="_blank" rel="noopener noreferrer">
-            Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, Germany</li>
-      </ul>
-    </div>
-    <div class="education-item">
-      <h3>2019 - 2024</h3>
-      <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
-      <p><strong> <a href="https://www.visvabharati.ac.in/index.html" target="_blank" rel="noopener noreferrer">Visva-Bharati</a>, India.</strong></p>
-      <ul>
-        <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
-        <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India.</li>
-      </ul>
-    </div>
-    <div class="education-subsection">
-      <div class="content">
-        <h3>Future Plans</h3>
-        <p>
-          I aim to further my research in regenerative medicine while exploring innovative neurobiological approaches to restore nervous system function.
-        </p>
-      </div>
-    </div>
-  </section>
-  <section class="get-in-touch" id="get-in-touch">
-    <h2>Get in Touch</h2>
-    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
-    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank" rel="noopener noreferrer">Venkatesh Lab</a> CSIR-CCMB</p>
-    <p><strong>Address:</strong><br>
-      Institute for Developmental Biology and Neurobiology (iDN)<br>
-      Johannes Gutenberg University Mainz<br>
-      Biozentrum 1<br>
-      Hanns-Dieter-Hüsch-Weg 15<br>
-      55128 Mainz<br>
-      Germany
-    </p>
+<section id="education" class="education-section">
+  <h2>Education</h2>
+  <div class="education-item">
+    <h3>2025-Present Day</h3>
+    <h4>PhD in Neuroscience</h4>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+      <strong>
+        <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1e293b;">
+          Johannes Gutenberg University Mainz
+        </a>, Germany
+      </strong>
     </p>
-  </section>
-  <footer>
-    © 2025 Arupam Biswas. All rights reserved.
-  </footer>
-</body>
-</html>
+    <ul>
+      <li>Title: Aptamer Based Electrochemical Sensor for Sensitive Detection of Psychoactive Drugs.</li>
+      <li>Supervisor: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Shukla, <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1e293b;">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>, Germany</li>
+    </ul>
+  </div>
+  <div class="education-item">
+    <h3>2019-2024</h3>
+    <h4>Five-Year Integrated M.Sc in Lifesciences</h4>
+    <p><strong> Visva-Bharati, India.</strong></p>
+    <ul>
+      <li>Master's Dissertation: High-Content Screening for neurite growth analyses: Evaluating gene treatments.</li>
+      <li>Supervisor: Dr. Ishwariya Venkatesh, CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB), India.</li>
+    </ul>
+  </div>
+  <div class="education-subsection">
+    <div class="content">
+      <h3>Future Plans</h3>
+      <p>
+        Write about your future plans here. Mention what you aim to achieve in the coming years, whether it's further research, a new project, or any other aspirations.
+      </p>
+    </div>
+  </div>
+</section>
